# complaint_statistic

./: .env.template  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  main.py  main_for_test.py  pyproject.toml  requirements.txt  test_crud.py  test_db.py  wait_test_crud.py  wait_test_db.py
alembic/: env.py
alembic/versions/: 2024_10_06_2235-bb26345318a8_create_table.py  2024_10_06_2255-5af2daae398d_create_table.py  2024_10_06_2315-a678d2f65413_create_complain_table.py  2024_10_06_2326-a8cc2da991d2_create_complain_table.py  2024_10_07_2304-7ca40d7c2bcb_create_complain_table.py  2024_10_09_1635-9487c82dc240_create_complain_table.py  2024_10_13_0055-e054daeba9bf_create_complain_table.py  2024_10_13_1314-09b278dddad4_create_table.py  2024_10_14_0029-e091a1e0550b_create_tables.py  2024_10_20_1517-6bcf2fcd6e4c_create_users_table.py  2024_10_20_1531-13d2b69327c8_create_surveilance_table.py  2024_10_20_1544-fd234612ae9e_create_complain_table.py  2024_10_20_1547-03f947b73848_create_fk_from_complain_to_surveillance_.py  (+4 more)
api/: complain.py  router.py  surveillance.py  theme.py  user.py
complaint_service/: __init__.py  config.py  crud.py  db_helper.py  db_starter.py  logger.py  model.py  repository.py  schema.py
core/: config.py
core/crud/: complain.py  theme.py  (+2 more)
test/: help_functions.py  not_actual_test_complain.py  old_test_db.py  response_for_test.rest  response_user.rest  test_actions_with_user.py  test_app.py  test_app_repositories.py  test_complain.py  test_create_user.py  test_db.py  test_new_app.py  test_update_fuctions.py  test_user_actions.py
(+22 files in other folders)
