[tool.poetry]
name = "complaint-statistic"
version = "0.1.0"
description = ""
authors = ["Babahasko <zakutni4ek@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
aiomysql = "^0.2.0"
pydantic = "^2.9.2"
pytest = "^8.3.3"
alembic = "^1.13.3"
pydantic-settings = "^2.5.2"
pytest-asyncio = "^0.24.0"
fastapi = "^0.115.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"